--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-/node_modules/
-/public/build/
+# Logs and temporary files
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# SvelteKit or Sapper files
+.svelte-kit/
+__sapper__/
+.vercel/
+
+# Production build
+public/build/ 
+
+# IDE and OS files
 .DS_Store
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+._*
+Thumbs.db
+ehthumbs.db
+
+# Local environment files
+.env
+.env.*
+!.env.example  # Exceção: Inclua o .env.example para modelos
